--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -9,9 +9,11 @@ $text-down: #cccccc;
   &__img {
     margin-bottom: 0;
     display: block;
+    width: 100%;
   }
 
   &__features {
+    width: 100%;
     border: 1px solid $light-gray;
     background-color: $white;
     display: flex;
@@ -164,7 +166,7 @@ $text-down: #cccccc;
     width: 292px;
 
     &__img {
-      width: 316px;
+      width: 100%;
       height: 462px;
     }
 
