--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -47,10 +47,11 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    will-change: transform;
+    transition: transform 0.3s ease;
 
     &:hover {
       transform: scale(1.2);
-      transition: transform 0.5s ease;
     }
 
     &:active {
